--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx webpack --watch serve & open http://localhost:8080/src",
+    "start": "npx webpack serve & open http://localhost:8080/src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webpack": "^5.37.0",
-    "webpack-dev-server": "^3.11.2"
+    "global": "^4.4.0"
   },
   "devDependencies": {
     "html-loader": "^2.1.2",
-    "webpack-cli": "^4.7.0"
+    "serve": "^11.3.2",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
