--- a/package.json
+++ b/package.json
@@ -1,22 +1,12 @@
 {
   "name": "firebase-iss-tracker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
   "scripts": {
-    "start": "npx webpack serve & open http://localhost:8080/src",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "global": "^4.4.0"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "devDependencies": {
-    "html-loader": "^2.1.2",
-    "serve": "^11.3.2",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "vite": "^2.3.3"
   }
 }
