--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firebase-iss-tracker",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite & open http://localhost:3000",
     "build": "vite build",
     "serve": "vite preview"
   },
